welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: identifier expected but integer literal found.
if (weekday && !vacation) return 7:00
                                   ^alarmClock:3: error: identifier expected but integer literal found.
if ((!weekday && !vacation) || (weekday && vacation)) return 10:00
                                                                ^