welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
if (weekday && !vacation) return 7:00
if ((!weekday && !vacation) || (weekday && vacation)) return 10:00
if (weekday && vacation) return off
}